manifests/base/platform-service/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-service-canary
  labels:
    app: platform-service
spec:
  selector:
    app: platform-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
