manifests/base/platform-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-service
  labels:
    app: platform-service
  annotations:
    team: platform
spec:
  selector:
    app: platform-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
